# Projektowanie_algorytmow

./: CMakeLists.txt
Inne/: Heapsort.py  Introsort.py  Timsort.py
Projekt_1_280082/: wynikheapsort.csv  wynikintrosort.csv  wyniktimsort.csv
Projekt_1_280082/Inne/: Wyniki_Projekt_1_280082.xlsx
Projekt_1_280082/header files/: heapsort.h  introsort.h
Projekt_1_280082/source files/: fileMaker.cpp  heapsort.cpp  introsort.cpp
header files/: check.h  fileMaker.h  heapsort.h  introsort.h  quicksort.h  timsort.h
source files/: check.cpp  fileMaker.cpp  fileMaker_univ.cpp  heapsort.cpp  introsort.cpp  main.cpp  quicksort.cpp  timsort.cpp
wyniki/heapsort/results/1000/0/: results_1000_0.txt
wyniki/heapsort/results/1000/1000/: results_1000_1000.txt
wyniki/heapsort/results/1000/250/: results_1000_250.txt
wyniki/heapsort/results/1000/500/: results_1000_500.txt
wyniki/heapsort/results/1000/750/: results_1000_750.txt
wyniki/heapsort/results/1000/950/: results_1000_950.txt
wyniki/heapsort/results/1000/990/: results_1000_990.txt
wyniki/heapsort/results/1000/997/: results_1000_997.txt
wyniki/heapsort/results/10000/0/: results_10000_0.txt
wyniki/heapsort/results/10000/1000/: results_10000_1000.txt
wyniki/heapsort/results/10000/250/: results_10000_250.txt
wyniki/heapsort/results/10000/500/: results_10000_500.txt
wyniki/heapsort/results/10000/750/: results_10000_750.txt
wyniki/heapsort/results/10000/950/: results_10000_950.txt
wyniki/heapsort/results/10000/990/: results_10000_990.txt
wyniki/heapsort/results/10000/997/: results_10000_997.txt
(+128 files in other folders)
